--- a/index.html
+++ b/index.html
@@ -58,39 +58,31 @@
         <div class="container">
           <ul class="qualities-list">
             <li class="qualities-item">
+              <!-- <img src="./img/img-2/antenna-1.png" alt="antenna" class="qualities-img"> -->
               <h3 class="qualities-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="qualities-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Possimus impedit quasi ducimus nihil dicta praesentium rem?
-                Aspernatur saepe autem aut repudiandae voluptates, est placeat
-                nihil debitis magni ducimus, omnis reprehenderit!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
             <li class="qualities-item">
+              <!-- <img src="./img/img-2/clock-1.png" alt="clock" class="qualities-img"> -->
               <h3 class="qualities-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="qualities-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-                ullam dicta repellat rem possimus explicabo assumenda provident
-                eaque libero! Voluptatibus quod sed consequatur porro qui
-                quaerat asperiores nam nisi sequi?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
             <li class="qualities-item">
+              <!-- <img src="./img/img-2/diagram-1.png" alt="diagrama" class="qualities-img"> -->
               <h3 class="qualities-title">ПЛАНУВАННЯ</h3>
               <p class="qualities-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Aliquid blanditiis voluptatibus eaque repudiandae excepturi aut
-                magnam porro tenetur, perferendis veniam nobis nihil iusto fuga
-                saepe ducimus mollitia iste quae nam.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
             <li class="qualities-item">
+              <!-- <img src="./img/img-2/astronaut-1.png" alt="astronaut" class="qualities-img"> -->
               <h3 class="qualities-title">СУЧАСНІ ТЕЧНОЛОГІЇ</h3>
               <p class="qualities-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Temporibus saepe beatae odit quam deleniti exercitationem ipsam
-                eum facilis tenetur dolores, laborum eligendi, natus commodi!
-                Commodi, repellat adipisci? Eveniet, reprehenderit dignissimos.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
           </ul>
@@ -179,55 +171,6 @@
               <p class="team-text">UI Designer</p>
             </li>
           </ul>
-        </div>
-      </section>
-      <!-- -client -->
-      <section class="section-client">
-        <div class="container">
-          <ul class="client-list">
-            <li class="client-item">
-              <a href="/" class="client-link">
-                <svg class="client-icon">
-                  <use href="./img/symbol-defs.svg#icon-client-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="client-item">
-              <a href="/" class="client-link">
-                <svg class="client-icon">
-                  <use href="./img/symbol-defs.svg#icon-client-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="client-item">
-              <a href="/" class="client-link">
-                <svg class="client-icon">
-                  <use href="./img/symbol-defs.svg#icon-client-3"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="client-item">
-              <a href="/" class="client-link">
-                <svg class="client-icon">
-                  <use href="./img/symbol-defs.svg#icon-client-4"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="client-item">
-              <a href="/" class="client-link">
-                <svg class="client-icon">
-                  <use href="./img/symbol-defs.svg#icon-client-5"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="client-item">
-              <a href="/" class="client-link">
-                <svg class="client-icon">
-                  <use href="./img/symbol-defs.svg#icon-client-6"></use>
-                </svg>
-              </a>
-            </li>
-          </ul> 
         </div>
       </section>
     </main>
