--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
               <a class="header-contact" href="info@devstudio.com"
                 >info@devstudio.com</a
               >
-            </li>
+            </ul>li>
+
             <li class="header-item">
               <a class="header-contact" href="tel:380961111111"
                 >+38 096 111 11 11</a
@@ -61,28 +62,32 @@
               <!-- <img src="./img/img-2/antenna-1.png" alt="antenna" class="qualities-img"> -->
               <h3 class="qualities-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="qualities-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
             <li class="qualities-item">
               <!-- <img src="./img/img-2/clock-1.png" alt="clock" class="qualities-img"> -->
               <h3 class="qualities-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="qualities-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
             <li class="qualities-item">
               <!-- <img src="./img/img-2/diagram-1.png" alt="diagrama" class="qualities-img"> -->
               <h3 class="qualities-title">ПЛАНУВАННЯ</h3>
               <p class="qualities-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
             <li class="qualities-item">
               <!-- <img src="./img/img-2/astronaut-1.png" alt="astronaut" class="qualities-img"> -->
               <h3 class="qualities-title">СУЧАСНІ ТЕЧНОЛОГІЇ</h3>
               <p class="qualities-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
               </p>
             </li>
           </ul>
@@ -170,6 +175,13 @@
               <p class="team-person">Михайло Єрмаков</p>
               <p class="team-text">UI Designer</p>
             </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div>
+          <ul>
+            <li></li>
           </ul>
         </div>
       </section>
