image and style

--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
             </li>
           </ul>
           <ul class="header-contacts">
+            <li>
+              <a href="" class="header-link"></a>
+              <svg class="header-svg">
+                <use class=""></use>
+              </svg>
+            </li>
             <li class="header-item">
-              <a class="header-contact" href="info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </ul>li>
-
+              <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
+            </ul>
             <li class="header-item">
               <a class="header-contact" href="tel:380961111111"
-                >+38 096 111 11 11</a
-              >
+                >+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
@@ -178,10 +180,40 @@
           </ul>
         </div>
       </section>
-      <section>
-        <div>
-          <ul>
-            <li></li>
+      <section class="section-client">
+        <div class="container">
+          <ul class="client-list">
+            <h2 class="client-title">Постійні клієнти</h2>
+            <li class="client-item">
+              <svg class="client-svg">
+                <a href="/" class="client-link"></a>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-svg">
+                <a href="/" class="client-link"></a>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-svg">
+                <a href="/" class="client-link"></a>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-svg">
+                <a href="/" class="client-link"></a>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-svg">
+                <a href="/" class="client-link"></a>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-svg">
+                <a href="/" class="client-link"></a>
+              </svg>
+            </li>
           </ul>
         </div>
       </section>
