--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
           </ul>
           <ul class="header-contacts">
             <li>
-              <a href="" class="header-link"></a>
-              <svg class="header-svg">
-                <use class=""></use>
-              </svg>
+                <a href="/" class="header-link">
+                <svg class="header-svg">
+                <use href="./img/img-2/symbol-defs.svg#icon-email-2">
+                </use>
+                </svg>
+                <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
+              </a>
             </li>
             <li class="header-item">
-              <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
-            </ul>
-            <li class="header-item">
-              <a class="header-contact" href="tel:380961111111"
-                >+38 096 111 11 11</a>
+              <a href="/" class="header-link">
+                <svg class="header-svg">
+                <use href="./img/img-2/symbol-defs.svg#icon-telephone">
+                </use>
+                </svg>
+              <a class="header-contact" href="tel:380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
@@ -139,22 +143,88 @@
                 src="img/img-2/img-1.jpg"
                 width="200"
                 height="200"
-                alt="product designer"
+                alt="ui designer"
               />
               <p class="team-person">Ігор Дем’яненко</p>
               <p class="team-text">Product Designer</p>
-            </li>
+              <ul class="team-svg-list">
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                      <use href="./img/img-2/symbol-defs.svg#icon-facebook">
+                      </use>
+                      </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             <li class="team-item">
               <img
                 class="team-img"
                 src="img/img-2/img-2.jpg"
                 width="200"
                 height="200"
-                alt="frontend developer"
+                alt="product designer"
               />
-              <p class="team-person">Ольга Репіна</p>
+              <p class="team-person">Ольга Репінна</p>
               <p class="team-text">Frontend Developer</p>
-            </li>
+              <ul class="team-svg-list">
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-facebook">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             <li class="team-item">
               <img
                 class="team-img"
@@ -165,7 +235,40 @@
               />
               <p class="team-person">Микола Тарасов</p>
               <p class="team-text">Marketing</p>
-            </li>
+                <ul class="team-svg-list">
+                  <li class="team-svg-item">
+                    <a href="/" class="team-link">
+                      <svg class="team-svg">
+                      <use href="./img/img-2/symbol-defs.svg#icon-instagram">
+                      </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-svg-item">
+                    <a href="/" class="team-link">
+                      <svg class="team-svg">
+                      <use href="./img/img-2/symbol-defs.svg#icon-twitter">
+                      </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-svg-item">
+                    <a href="/" class="team-link">
+                      <svg class="team-svg">
+                        <use href="./img/img-2/symbol-defs.svg#icon-facebook">
+                        </use>
+                        </svg>
+                    </a>
+                  </li>
+                  <li class="team-svg-item">
+                    <a href="/" class="team-link">
+                      <svg class="team-svg">
+                      <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
+                      </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
             <li class="team-item">
               <img
                 class="team-img"
@@ -176,8 +279,90 @@
               />
               <p class="team-person">Михайло Єрмаков</p>
               <p class="team-text">UI Designer</p>
-            </li>
+              <ul class="team-svg-list">
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                      <use href="./img/img-2/symbol-defs.svg#icon-facebook">
+                      </use>
+                      </svg>
+                  </a>
+                </li>
+                <li class="team-svg-item">
+                  <a href="/" class="team-link">
+                    <svg class="team-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
+                    </use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
           </ul>
+        </div>
+      </section>
+      <section class="client-section">
+        <div class="container">
+            <h2 class="client-title">Постійні клієнти</h2>
+            <ul class="client-list">
+                <li class="client-item">
+                    <a href="/" class="client-link">
+                        <svg class="client-svg">
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="/" class="client-link">
+                        <svg class="client-svg">
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="/" class="client-link">
+                        <svg class="client-svg">
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-3"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="/" class="client-link">
+                        <svg class="client-svg">
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-4"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="/" class="client-link">
+                        <svg class="client-svg">
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-5"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="/" class="client-link">
+                        <svg class="client-svg">
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-4"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
       </section>
     </main>
@@ -191,14 +376,47 @@
           <ul class="footer-list">
             <li class="footer-item">
               <a class="footer-contact" href="info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com</a>
             </li>
             <li class="footer-item">
               <a class="footer-contact" href="tel:380961111111"
-                >+38 096 111 11 11</a
-              >
+                >+38 096 111 11 11</a>
             </li>
+            <h3 class="footer-title">ПРИЄДНУЙТЕСЬ</h3>
+            <ul class="footer-svg-list">
+              <li class="footer-svg-item">
+                <a href="/" class="footer-link">
+                  <svg class="footer-svg">
+                  <use href="./img/img-2/symbol-defs.svg#icon-instagram">
+                  </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-svg-item">
+                <a href="/" class="footer-link">
+                  <svg class="footer-svg">
+                  <use href="./img/img-2/symbol-defs.svg#icon-twitter">
+                  </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-svg-item">
+                <a href="/" class="team-link">
+                  <svg class="footer-svg">
+                    <use href="./img/img-2/symbol-defs.svg#icon-facebook">
+                    </use>
+                    </svg>
+                </a>
+              </li>
+              <li class="footer-svg-item">
+                <a href="/" class="footer-link">
+                  <svg class="footer-svg">
+                  <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
+                  </use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </ul>
         </div>
       </section>
