--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </li>
           </ul>
           <ul class="header-contacts">
-            <li class="header-item">
+            <li class="header-media-item">
                 <a href="/" class="header-link"></a>
                 <svg class="header-svg">
                 <use href="./img/img-2/symbol-defs.svg#icon-email-2" class="header-svg-use">
@@ -41,7 +41,7 @@
                 </svg>
                 <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="header-item">
+            <li class="header-media-item">
               <a href="/" class="header-link"></a>
               <svg class="header-svg">
               <use href="./img/img-2/symbol-defs.svg#icon-telephone" class="header-svg-use">
