--- a/portfolio.html
+++ b/portfolio.html
@@ -33,29 +33,21 @@
             </li>
           </ul>
           <ul class="header-contacts">
-            <li class="header-item">
-              <a href="/" class="header-link"></a>
-              <svg class="header-svg">
-                <use
-                  href="./img/img-2/symbol-defs.svg#icon-email-2"
-                  class="header-svg-use"
-                ></use>
-              </svg>
-              <a class="header-contact" href="info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="header-media-item">
+                <a href="/" class="header-link"></a>
+                <svg class="header-svg">
+                <use href="./img/img-2/symbol-defs.svg#icon-email-2" class="header-svg-use">
+                </use>
+                </svg>
+                <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="header-item">
+            <li class="header-media-item">
               <a href="/" class="header-link"></a>
               <svg class="header-svg">
-                <use
-                  href="./img/img-2/symbol-defs.svg#icon-telephone"
-                  class="header-svg-use"
-                ></use>
+              <use href="./img/img-2/symbol-defs.svg#icon-telephone" class="header-svg-use">
+              </use>
               </svg>
-              <a class="header-contact" href="+38 096 111 11 11"
-                >+38 096 111 11 11</a
-              >
+              <a class="header-contact" href="+38 096 111 11 11">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
