--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <section class="header-section">
         <div class="container">
           <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
-          <ul class="header-pages">
+          <ul class="header-list">
             <li class="header-item">
-              <a class="header-link" href="./index.html">Студія</a>
+              <a class="header-links" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
               <a class="header-link" href="./portfolio.html">Портфоліо</a>
