--- a/portfolio.html
+++ b/portfolio.html
@@ -21,12 +21,12 @@
       <section class="header-section">
         <div class="container">
           <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
-          <ul class="header-pages">
+          <ul class="header-list">
             <li class="header-item">
               <a class="header-link" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
-              <a class="header-link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-links" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header-item">
               <a class="header-link" href="/">Контакти</a>
@@ -267,7 +267,7 @@
               <li class="footer-svg-item">
                 <a href="/" class="footer-link">
                   <svg class="footer-svg">
-                  <use href="./img/img-2/symbol-defs.svg#icon-instagram">
+                  <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="footer-svg-use">
                   </use>
                   </svg>
                 </a>
@@ -275,7 +275,7 @@
               <li class="footer-svg-item">
                 <a href="/" class="footer-link">
                   <svg class="footer-svg">
-                  <use href="./img/img-2/symbol-defs.svg#icon-twitter">
+                  <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="footer-svg-use">
                   </use>
                   </svg>
                 </a>
@@ -283,7 +283,7 @@
               <li class="footer-svg-item">
                 <a href="/" class="team-link">
                   <svg class="footer-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-facebook">
+                    <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="footer-svg-use">
                     </use>
                     </svg>
                 </a>
@@ -291,7 +291,7 @@
               <li class="footer-svg-item">
                 <a href="/" class="footer-link">
                   <svg class="footer-svg">
-                  <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
+                  <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="footer-svg-use">
                   </use>
                   </svg>
                 </a>
