class use remove

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="header-media-item">
                 <a href="/" class="header-link"></a>
                 <svg class="header-svg">
-                <use href="./img/img-2/symbol-defs.svg#icon-email-2" class="header-svg-use">
+                <use href="./img/img-2/symbol-defs.svg#icon-email-2">
                 </use>
                 </svg>
                 <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
@@ -44,7 +44,7 @@
             <li class="header-media-item">
               <a href="/" class="header-link"></a>
               <svg class="header-svg">
-              <use href="./img/img-2/symbol-defs.svg#icon-telephone" class="header-svg-use">
+              <use href="./img/img-2/symbol-defs.svg#icon-telephone">
               </use>
               </svg>
               <a class="header-contact" href="+38 096 111 11 11">+38 096 111 11 11</a>
@@ -235,7 +235,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                     </use>
                     </svg>
                   </a>
@@ -243,7 +243,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                     </use>
                     </svg>
                   </a>
@@ -251,7 +251,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                     </use>
                     </svg>
                   </a>
@@ -259,7 +259,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                     </use>
                     </svg>
                   </a>
@@ -279,7 +279,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                       </use>
                       </svg>
                     </a>
@@ -287,7 +287,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                       </use>
                       </svg>
                     </a>
@@ -295,7 +295,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="team-svg-use">
+                        <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                         </use>
                         </svg>
                     </a>
@@ -303,7 +303,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                       </use>
                       </svg>
                     </a>
@@ -323,7 +323,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                     </use>
                     </svg>
                   </a>
@@ -331,7 +331,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                     </use>
                     </svg>
                   </a>
@@ -339,7 +339,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                       </use>
                       </svg>
                   </a>
@@ -347,7 +347,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                     </use>
                     </svg>
                   </a>
